update MigrationManifestBuilder with soft delete and update tests